plugins {
    id 'application'
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

sourceCompatibility = JavaVersion.VERSION_17
targetCompatibility = JavaVersion.VERSION_17

group 'askov.schoolprojects.cg.coloris'
version '1.0'

application {
    mainClassName = 'askov.schoolprojects.cg.coloris.Coloris'
}

javafx {
    version = '19'
    modules = ['javafx.controls', 'javafx.media']
}

repositories {
    mavenCentral()
}